# dev_board_speedcoatch_pico

./: .gitignore  .gitmodules  CMakeLists.txt
configs/: FreeRTOSConfig.h
inc/: battery.h  images.h
inc/display/: disp_task.h  disp_watch.h  image_start_logo.h  page.h  status_line_images.h
inc/trainTask/: train.h
libs/: CMakelists.txt
libs/bluetooth/: CMakeLists.txt  mygatt.gatt
libs/bluetooth/include/bluetooth/: ble_hrt_client.h  bluetooth_core.h
libs/bluetooth/src/: ble_hrt_client.c  bluetooth_core.c
libs/gps/: CMakeLists.txt  gps cmd
libs/gps/include/: gps.h  uart_parser.h
libs/gps/src/: gps.c  uart_parser.c
libs/mpu/: CMakeLists.txt
libs/mpu/include/: mpu.h
libs/mpu/src/: mpu.c
libs/uiElements/: CMakeLists.txt
libs/uiElements/include/: ui_menu.h
libs/uiElements/include/uiElements/: ui_menu.h  ui_spinbox_int.h  ui_spinbox_screen.h
libs/uiElements/src/: ui_menu.c  ui_spinbox_int.c  ui_spinbox_screen.c
libs/w25qxx/: CMakeLists.txt
libs/w25qxx/include/w25qxx/: w25qxx.h
libs/w25qxx/src/: w25qxx.c
source/: Makefile  images.c  images.h  images.yaml
src/: battery.c  images.c  main.c
src/display/: apply_page.c  disp_bluetooth.c  disp_dataPage.c  disp_dataPageSettings.c  disp_setting.c  disp_task.c  disp_watch.c  disp_watch_setting.c  image_start_logo.c  mainPage.c  status_line_images.c
src/trainTask/: train.c
